[gd_scene load_steps=10 format=3 uid="uid://c5ptrro73l43e"]

[ext_resource type="Script" uid="uid://br64putmqr4xr" path="res://GameStarter/forgot_password_popup.gd" id="1_klqj2"]
[ext_resource type="Texture2D" uid="uid://cbnhdmxantoom" path="res://assets/ui/Popup Settings.png" id="1_lw1en"]
[ext_resource type="FontFile" uid="uid://dui23xil84umq" path="res://assets/fonts/porter-sans-inline-block-webfont.ttf" id="2_l77d4"]
[ext_resource type="Texture2D" uid="uid://cp6gvl7q3kwp0" path="res://assets/ui/Text field.png" id="3_ixdgj"]
[ext_resource type="Texture2D" uid="uid://buk34li2ffbo0" path="res://assets/ui/BackIcon.png" id="4_e05fo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e57hm"]
bg_color = Color(0, 0.631373, 0.964706, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vj0oa"]
bg_color = Color(0, 0.631373, 0.964706, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_41yvu"]
bg_color = Color(0, 0.631373, 0.964706, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3lwdr"]
bg_color = Color(0.156863, 0.654902, 0.270588, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="ForgotPasswordPopup" type="Node2D"]
z_index = 1500
script = ExtResource("1_klqj2")

[node name="PopupSettings" type="Sprite2D" parent="."]
z_index = 1000
position = Vector2(568, 406)
texture = ExtResource("1_lw1en")

[node name="Submit btn" type="Button" parent="PopupSettings"]
z_index = 1000
offset_left = -152.731
offset_top = 41.454
offset_right = 119.269
offset_bottom = 98.454
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_e57hm")
theme_override_styles/hover = SubResource("StyleBoxFlat_vj0oa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_41yvu")
theme_override_styles/normal = SubResource("StyleBoxFlat_3lwdr")
text = "Submit Code"

[node name="RichTextLabel2" type="Label" parent="PopupSettings"]
offset_left = -301.469
offset_top = -309.178
offset_right = 277.531
offset_bottom = -132.178
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_l77d4")
theme_override_font_sizes/font_size = 60
text = "    RESET
 Password"

[node name="Code3" type="TextureRect" parent="PopupSettings"]
offset_left = -326.426
offset_top = 132.258
offset_right = 338.574
offset_bottom = 188.258
texture = ExtResource("3_ixdgj")

[node name="LabelCode" type="LineEdit" parent="PopupSettings/Code3"]
layout_mode = 0
offset_top = 1.52588e-05
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
alignment = 1
flat = true

[node name="Label" type="Label" parent="PopupSettings/Code3/LabelCode"]
layout_mode = 0
offset_left = 4.99122
offset_top = -26.4023
offset_right = 225.991
offset_bottom = 1.59769
theme_override_font_sizes/font_size = 20
text = "Code"

[node name="Email2" type="TextureRect" parent="PopupSettings"]
offset_left = -338.404
offset_top = -57.2461
offset_right = 326.596
offset_bottom = -1.24638
texture = ExtResource("3_ixdgj")

[node name="LabelEmail" type="LineEdit" parent="PopupSettings/Email2"]
layout_mode = 0
offset_top = 1.52588e-05
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
alignment = 1
flat = true

[node name="Label" type="Label" parent="PopupSettings/Email2/LabelEmail"]
layout_mode = 0
offset_left = 4.99122
offset_top = -26.4023
offset_right = 225.991
offset_bottom = 1.59769
theme_override_font_sizes/font_size = 20
text = "Email"

[node name="BackButton login" type="TextureButton" parent="PopupSettings"]
offset_left = -512.099
offset_top = -349.645
offset_right = -438.099
offset_bottom = -275.645
texture_normal = ExtResource("4_e05fo")

[node name="Reset Btn" type="Button" parent="PopupSettings"]
z_index = 1000
offset_left = -141.751
offset_top = 288.204
offset_right = 130.249
offset_bottom = 345.204
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_e57hm")
theme_override_styles/hover = SubResource("StyleBoxFlat_vj0oa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_41yvu")
theme_override_styles/normal = SubResource("StyleBoxFlat_3lwdr")
text = "Reset Password"

[node name="NewPassword4" type="TextureRect" parent="PopupSettings"]
offset_left = -332.415
offset_top = 219.114
offset_right = 332.585
offset_bottom = 275.114
texture = ExtResource("3_ixdgj")

[node name="LabelNewPassword" type="LineEdit" parent="PopupSettings/NewPassword4"]
layout_mode = 0
offset_top = 1.52588e-05
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
alignment = 1
flat = true

[node name="Label" type="Label" parent="PopupSettings/NewPassword4/LabelNewPassword"]
layout_mode = 0
offset_left = 4.99122
offset_top = -26.4023
offset_right = 225.991
offset_bottom = 1.59769
theme_override_font_sizes/font_size = 20
text = "New Password"

[connection signal="pressed" from="PopupSettings/Submit btn" to="." method="_on_submit_btn_pressed"]
[connection signal="pressed" from="PopupSettings/BackButton login" to="." method="_on_back_button_login_pressed"]
[connection signal="pressed" from="PopupSettings/Reset Btn" to="." method="_on_reset_btn_pressed"]
